# Ingestion-Server

./: .gitignore  CMakeLists.txt  README.md  doc.txt  planning.txt  req.txt  test.cpp
Documentation/: Doxyfile
config/: company_rtsp_path.txt  config.hpp  meta_data.json  qt_rtsp_path.json
include/: app_setting.hpp  camera.hpp  camerasSettings.hpp  gst_pipeline.hpp  logger.hpp  pipeline_manager.hpp  streamManager.hpp  video_pipeline.hpp
src/: camera.cpp  camerasSettings.cpp  gst_pipeline.cpp  https_server.cpp  logger.cpp  main.cpp  pipeline_manager.cpp  rtsp_server.cpp  streamManager.cpp  video_pipeline.cpp
